--- a/style.css
+++ b/style.css
@@ -1,3 +1,44 @@
 body{
+ 
     font-family: 'Merriweather', serif;
+    margin: 0;
+}
+section{
+    display: flex;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+h1{
+    font-size: 40px;
+    
+}
+
+
+.orange-color{
+    color: orange;
+}
+
+
+.half{
+ 
+    width: 50%;
+    padding-left: 5%;
+    
+}
+.half img{
+    width: 80%;
+   
+  
+}
+
+.link-button{
+    text-decoration:none;
+    background-image: linear-gradient(orange, tomato);
+    padding:10px 40px;
+    color: white;
+    border-radius: 5px;
+    font-weight: 700px;
+
 }
