--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@ body{
 }
 section{
     display: flex;
+    margin-bottom: 150px;
 }
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+    
 }
 h1{
     font-size: 40px;
@@ -41,4 +43,44 @@ h1{
     border-radius: 5px;
     font-weight: 700px;
 
+}
+.mid-banner{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.dis{
+    display: block;
+    font-weight: 700px;
+}
+.card{
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5%;
+    box-shadow: 5px 5px 40px grey;
+    border-radius: 5px 5px 5px 0px;
+padding-left: 20px;
+    
+
+}
+
+
+#ful-stack{
+    border-left:5px solid;
+    border-image:linear-gradient(lightskyblue, red) ;
+    border-image-slice: 30%;
+}
+#baby-stack{
+    border-left:5px solid;
+    border-image: linear-gradient(rgb(92, 12, 145), rgb(25, 216, 175));
+    border-image-slice: 1;
+}
+
+.bottom-banner{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+}
+
+footer p{
+    text-align: center;
 }
